# sonoff-zigbee-driver

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/: device_manager.hpp  serial_communication.hpp  zigbee_dongle.hpp  zstack_protocol.hpp
include/zigbee/: SerialPort.hpp  Types.hpp  ZNPCommands.hpp  ZNPFrame.hpp  ZigbeeDevice.hpp  ZigbeeDongle.hpp  ZigbeeEvent.hpp
src/: CMakeLists.txt  SerialPort.cpp  ZNPFrame.cpp  ZigbeeDevice.cpp  ZigbeeDongle.cpp  zigbee_dongle.cpp
